fix weird scrollbar color?

--- a/css/style.css
+++ b/css/style.css
@@ -84,12 +84,13 @@ footer {
 
 * {
     scrollbar-width: thin;
-    scrollbar-color: blue orange;
+
 }
 
 *::-webkit-scrollbar {
     width: 12px;
     height: 1em;
+
 }
 
 *::-webkit-scrollbar-track {
